# sail

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  bench.py  broadcast_test.py  build.sh  build_csrc.py  build_wheels.sh  grad_test.py  launch_manylinux.sh  mypy.ini  pytest.ini  reduction_test.py  repr.py  requirements-dev.txt  requirements.txt  setup.py  test.py  test.sh  test_matmul.py  valgrind.sh
sail/csrc/: CMakeLists.txt  __init__.py  libsail.pyi.psrc  setup.py  template_converter.py
sail/csrc/core/: CMakeLists.txt  Tensor.cpp  Tensor.h  TensorBody.cpp  TensorBody.h  constants.h  dtypes.h  exception.h  factories.cpp  factories.h  numeric.cpp  numeric.h  slice.h  tensor_iterator.cpp  tensor_iterator.h  tensor_shape.cpp  tensor_shape.h  types.h  utils.h
sail/csrc/core/autograd/: ActivationGrad.cpp  ActivationGrad.h  BinaryGrad.cpp  BinaryGrad.h  ExponentialGrad.cpp  ExponentialGrad.h  LinalgGrad.cpp  LinalgGrad.h  LossGrad.cpp  LossGrad.h  MutationGrad.cpp  MutationGrad.h  ReductionGrad.cpp  ReductionGrad.h  UnaryGrad.cpp  UnaryGrad.h  activations.cpp  activations.h  addmm_function.cpp  addmm_function.h  autograd.h  binary_function.cpp  binary_function.h  function.cpp  function.h  loss.cpp  loss.h  reduction_function.cpp  reduction_function.h  unary_function.cpp  unary_function.h
sail/csrc/core/autograd/layers/: ConvGrad.cpp  ConvGrad.h  PoolGrad.cpp  PoolGrad.h
sail/csrc/core/initializers/: initializers.h  kaiming.cpp  kaiming.h  utils.h  xavier.cpp  xavier.h
sail/csrc/core/kernels/: Activation.cpp  Activation.h  Binary.cpp  Binary.h  Compare.cpp  Compare.h  Conv.cpp  Conv.h  Copy.cpp  Copy.h  Exponential.cpp  Exponential.h  Kernel.h  Linalg.cpp  Linalg.h  Loss.cpp  Loss.h  Mutation.cpp  Mutation.h  Optimizer.cpp  Optimizer.h  Reduction.cpp  Reduction.h  Repr.cpp  Repr.h  Unary.cpp  Unary.h  arithmetic.h.src  base.h  broadcast.h  copy.h  dispatch.h  elementwise.h  equality.h  kernel.h  kernel_utils.h  reduction.h  repr.h  unary.h  utils.h
sail/csrc/core/kernels/activations/: log_softmax.h  relu.h  sigmoid.h
sail/csrc/core/kernels/cpu/: Binary.cpp  Compare.cpp  Copy.cpp  Exponential.cpp  Impls.h  Unary.cpp  loops.h
sail/csrc/core/kernels/linalg/: matmul.h
sail/csrc/core/kernels/loss/: loss.h  mean_squared_error.h
sail/csrc/core/loss/: cross_entropy_loss.cpp  cross_entropy_loss.h  mean_squared_error.cpp  mean_squared_error.h
sail/csrc/core/modules/: module.h  modules.h
sail/csrc/core/onednn/: conv2d.h  conv2d_backward_data.h  conv2d_backward_weights.h  conv2d_forward.h  linear.h  onednn_utils.h  pooling.h  reorder.h
sail/csrc/core/ops/: ActivationOps.cpp  ActivationOps.h  BinaryOps.cpp.src  BinaryOps.h  CompareOps.cpp.src  CompareOps.h  ConvOps.cpp  ConvOps.h  CopyOps.cpp  CopyOps.h  ExponentialOps.cpp  ExponentialOps.h  LinalgOps.cpp  LinalgOps.h  LossOps.cpp  LossOps.h  MutationOps.cpp  MutationOps.h  PoolOps.cpp  PoolOps.h  ReductionOps.cpp  ReductionOps.h  ReprOps.cpp  ReprOps.h  UnaryOps.cpp  UnaryOps.h  broadcast.cpp  broadcast.h  copy.cpp  copy.h  equality.cpp  equality.cpp.src  equality.h  ops.h  reduction.cpp  reduction.h  repr.h  tools.h
sail/csrc/core/optimizers/: optimizer.h  optimizers.h  sgd.cpp  sgd.h
sail/csrc/libs/conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt
sail/csrc/python/: arg_parser.h  error_defs.h  functions.h  functions.yaml  generate.py  loss_def.cpp  macros.h  module_def.cpp  module_def2.cpp  optimizer_def.cpp  py_utils.h  random_def.cpp  sail_def.cpp
sail/csrc/python/generate_utils/: functions.yaml  generate.py  module_generator.py  modules.yaml  utils.py
sail/csrc/python/initializers/: initializers.h
sail/csrc/python/ops/: broadcast.h  docstring.h  elementwise.h  elementwise.h.src  ops_def.h  reduction.h
sail/csrc/python/py_dtypes/: py_dtype.h  py_dtype_def.h  py_dtype_float32.h  py_dtype_float64.h  py_dtype_int32.h  py_dtype_methods.h
sail/csrc/python/py_loss/: py_loss.h  py_loss_def.h  py_loss_mean_squared_error.h  py_loss_methods.h  py_loss_softmax_cross_entropy.h
sail/csrc/python/py_module/: py_module.h  py_module_def.h  py_module_linear.h  py_module_methods.h  py_module_relu.h  py_module_sigmoid.h  py_module_softmax.h
sail/csrc/python/py_optimizer/: py_optimizer.h  py_optimizer_def.h  py_optimizer_methods.h  py_optimizer_sgd.h
sail/csrc/python/py_tensor/: py_tensor.h  py_tensor_def.h  py_tensor_mapping_methods.h  py_tensor_methods.h  py_tensor_number_methods.h  py_tensor_number_methods.h.src
sail/csrc/python/random/: random_def.h  random_factories.h
sail/csrc/src/: CMakeLists.txt  Tensor.cpp  Tensor.h  TensorBody.cpp  TensorBody.h  Tensor_storage.cpp  Tensor_storage.h  dtypes.h  error.h  factories.cpp  factories.h  tensor_shape.cpp  tensor_shape.h  test.cpp  types.h  utils.h
sail/csrc/src/autograd/: activations.cpp  activations.h  addmm_function.cpp  admm_function.h  autograd.h  binary_function.cpp  binary_function.cpp.src  binary_function.h  function.cpp  function.h  loss.cpp  reduction_function.cpp  reduction_function.h  unary_function.cpp  unary_function.h
sail/csrc/src/cuda/: cuda_math.cu  cuda_math.h
sail/csrc/src/kernels/: arithmetic.h  arithmetic.h.src  base.h  broadcast.h  copy.h  elementwise.h  kernel.h  kernel_utils.h  reduction.h  repr.h  unary.h
sail/csrc/src/loss/: cross_entropy_loss.cpp  cross_entropy_loss.h
sail/csrc/src/modules/: module.h  modules.h
sail/csrc/src/onednn/: linear.h
sail/csrc/src/ops/: broadcast.cpp  broadcast.h  copy.cpp  copy.h  elementwise.cpp  elementwise.cpp.src  elementwise.h  negate.cpp  negate.h  ops.h  reduction.cpp  reduction.h  repr.h
sail/csrc/src/optimizers/: optimizer.h  sgd.cpp
sail/csrc/test/: autograd_test.cpp  compare_test.cpp  dtype_test.cpp  error_test.cpp  factories_test.cpp  force_binary.cpp  force_compare.cpp  force_unary.cpp  init_test.cpp  iterator_test.cpp  kernel_test.cpp  linalg.cpp  main.cpp  math_test.cpp  ops_tools_test.cpp  other_tests.cpp  tensor_body_test.cpp  tensor_test.cpp
sail/csrc/test/test_cpp/: test.cpp
(+329 files in other folders)
