# set(CMAKE_CXX_COMPILER "gcc")
cmake_minimum_required(VERSION 2.8.12)
project(sail_c LANGUAGES CXX C) # CUDA
# enable_language(CUDA)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE 1)

option(USE_AVX2 "USE_AVX2" OFF)
option(USE_AVX2 "USE_MKL" ON)
option(COVERAGE "COVERAGE" OFF)

if (USE_AVX2)
    ADD_DEFINITIONS(-DUSE_AVX2) # NEED FOR AVX2 SUPPORT IN KERNELS
endif(USE_AVX2)

List(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)

set(SAIL_LIBRARIES)
set(SAIL_INCLUDE_DIRS)
set(SAIL_BUILD_WITH)

find_package(Atlas)

if (Atlas_FOUND)
ADD_DEFINITIONS(-DAtlas_BLAS)
list(APPEND SAIL_LIBRARIES ${Atlas_LIBRARIES})
list(APPEND SAIL_INCLUDE_DIRS ${Atlas_INCLUDE_DIRS})
set(SAIL_BUILD_WITH "${SAIL_BUILD_WITH} Atlas")
endif()
if(USE_MKL)
find_package(MKL)
find_package(MKLDNN)

if (MKL_FOUND)
list(APPEND SAIL_LIBRARIES ${MKL_LIBRARIES})
list(APPEND SAIL_INCLUDE_DIRS ${MKL_INCLUDE_DIR})
set(SAIL_BUILD_WITH "${SAIL_BUILD_WITH} MKL")
ADD_DEFINITIONS(-DMKL)
else()
message(WARNING "NO MKL FOUND")
endif()

if (MKLDNN_FOUND)
ADD_DEFINITIONS(-DMKLDNN)
list(APPEND SAIL_LIBRARIES ${MKLDNN_LIBRARIES})
list(APPEND SAIL_INCLUDE_DIRS ${MKLDNN_INCLUDE_DIR})
set(SAIL_BUILD_WITH "${SAIL_BUILD_WITH} MKLDNN")
endif()

endif()

message("Building SAIL with${SAIL_BUILD_WITH}")

add_subdirectory(sail/csrc)