cmake_minimum_required(VERSION 2.8)
project(sail_c LANGUAGES CXX) # CUDA
# find_package(CUDA REQUIRED)

file(GLOB_RECURSE headers CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE files CONFIGURE_DEPENDS "*.cpp")

include(FindBLAS)

add_library(src STATIC ${headers} ${files} )#"cuda/cuda_math.h" "cuda/cuda_math.cu")

if (MKL_FOUND) 
target_include_directories(src PUBLIC ${MKL_INCLUDE_DIR})
target_link_libraries(src PUBLIC ${MKL_LIBRARIES})
target_link_libraries(src PUBLIC "-lgcov")
else()
message(WARNING "MKL not found")
if (Atlas_FOUND) 
include_directories(${Atlas_INCLUDE_DIRS})
target_include_directories(src PUBLIC ${Atlas_INCLUDE_DIRS})
target_link_libraries(src PUBLIC ${Atlas_LIBRARIES})
message(status "atlas found")
else()
message(WARNING "Atlas not found")
endif()
endif()
if (MKLDNN_FOUND) 
target_include_directories(src PUBLIC ${MKLDNN_INCLUDE_DIR})
target_link_libraries(src PUBLIC ${MKLDNN_LIBRARIES})
else()
message(WARNING "MKL DNN not found")
endif()
target_include_directories(src PRIVATE "../libs/xsimd/include")
# if (BLAS_FOUND)
#     target_compile_options(src PRIVATE ${BLAS_LINKER_FLAGS})
#     target_link_libraries(src ${BLAS_LIBRARIES})
# endif ()
